--- a/package.json
+++ b/package.json
@@ -18,6 +18,10 @@
   },
   "homepage": "https://github.com/arajis06/Liri-Node-App#readme",
   "dependencies": {
+    "axios": "^0.19.0",
+    "dotenv": "^8.0.0",
+    "moment": "^2.24.0",
+    "node": "^12.5.0",
     "node-spotify-api": "^1.1.1"
   }
 }
