--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "Liri-Node-App",
+  "name": "liri-node-app",
   "version": "1.0.0",
   "description": "",
   "main": "index.js",
@@ -23,5 +23,6 @@
     "moment": "^2.24.0",
     "node": "^12.5.0",
     "node-spotify-api": "^1.1.1"
-  }
+  },
+  "devDependencies": {}
 }
